syntax = "proto3";

package io.spinnaker;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.orca.proto.execution";

message Notification {
  enum NotificationType {
    email = 0;
    slack = 1;
    sms = 2;
  }
  NotificationType type = 1;
  string address = 2;
  string cc = 3;
}
